# NerdNostalgia

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DATABASE.md  DOCKER.md  Dockerfile  Makefile  POETRY.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-run.sh  main.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  pytest.ini  requirements-test.txt
backend/scripts/: SYNC_FROM_LOCAL.md  backfill_vinted_descriptions.py  clean_vinted_hashtags.py  create_admin.py  run_migrations.py  sync_from_local.py
backend/src/: main.py  requirements.txt
backend/src/api/: alerts.py  articles.py  auth.py  card_purchases.py  cardtrader.py  categories.py  consignment_sales.py  dashboard.py  ebay.py  expenses.py  inquiries.py  inventory.py  lots.py  marketplace_fees.py  misc_sales.py  (+8 more)
backend/tests/: conftest.py
config/: config.template.yaml
data/: example.csv  template.csv
database/: 01_user.sql  03_inquiries.sql  04_wanted.sql  05_articles_display_order.sql  06_articles_vinted.sql  07_articles_ebay.sql  09_marketplace_fees.sql  12_vinted_sync.sql  13_inventory_items.sql  19_creations.sql  20_misc_sales_kind.sql  articles.sql  schema.sql  user.sql
database/_legacy_postgres/: 08_marketplace_prices.sql  10_categories.sql  11_inventory.sql  12_vinted_sync.sql  14_lots.sql  15_personal_cards.sql  16_personal_cards_sales.sql  17_expenses.sql  18_platforms.sql  21_consignment.sql
database/migrations/: .gitkeep  0001_seed_initial.sql  0002_add_shipping_cost.sql  0003_default_shipping_5.sql  0004_orders.sql  0005_order_items_timestamps.sql  0006_orders_hand_exchange.sql  0007_inventory_list_price.sql  0008_settings.sql  0009_category_alerts.sql  0010_cardtrader.sql  0011_cardtrader_card_attrs.sql  0012_ebay.sql
frontend/: .dockerignore  .env.local.example  Dockerfile  Dockerfile.prod  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.mts
frontend/__tests__/: setup.ts
frontend/public/: admin-manifest.webmanifest
frontend/src/: middleware.ts
notes/: manual_tests.md
scripts/: migrate_pg_to_sqlite.py
src/database/: __init__.py  manager.py  models.py
src/models/: item.py
src/parsers/: csv_parser.py
src/utils/: config.py  logger.py
tests/: test_parser.py
(+201 files in other folders)
