[tool.poetry]
name = "nerdnostalgia"
version = "0.1.0"
description = "Sistema di gestione e pubblicazione articoli su piattaforme di e-commerce"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/nerdnostalgia"
repository = "https://github.com/yourusername/nerdnostalgia"
keywords = ["e-commerce", "ebay", "automation", "marketplace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
ebaysdk = "^2.2.0"
requests = "^2.31.0"
colorlog = "^6.7.0"
click = "^8.1.0"
# Database
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
ipython = "^8.12.0"

[tool.poetry.group.gui]
optional = true

[tool.poetry.group.gui.dependencies]
# PyQt5 = "^5.15.0"
# PyQt6 = "^6.5.0"

[tool.poetry.scripts]
nerdnostalgia = "main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configurazione Black
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Configurazione Pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

# Configurazione Coverage
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Configurazione MyPy
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Configurazione Flake8 (in .flake8 file)
